<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="guet.mrx.mycontacts.ImportActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_tablename" />

    <EditText
        android:id="@+id/table_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint_table" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_filepath" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_hint_filepath" />

        <Button
            android:id="@+id/explore"
            android:layout_width="40dp"
            android:layout_height="32dp"
            android:background="#26a69a"
            android:text="@string/button_explor" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_encoding" />

    <Spinner
        android:id="@+id/encoding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/start_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26a69a"
        android:text="@string/start_import" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_notes" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>